Added the email functionality and approver aprrovaltaker table operations
show the Oslink   provided by approvaltaker  to approver's webpage
accept will add the 'accepted' entry to approver table
reject will add the 'rejected' entry to approver table
approver and approvaltaker tables are connected by foreign key because one Os link need to be approved from many approvers

--- a/style.css
+++ b/style.css
@@ -42,6 +42,11 @@ form, .content {
   border-radius: 5px;
   border: 1px solid gray;
 }
+.center {
+  padding: 70px 0;
+  border: 3px solid green;
+  text-align: center;
+}
 .btn {
   padding: 10px;
   font-size: 15px;
