removed and modified some files, added some error handling, improved UI
Covered scenarios
1. Already applied for the same Os link
2. Already applied and approved OS link
3. Already applied and rejected OS link,
4. Approver has not sign up before approval taker applied for approval
5. approver do not have pending requests
6. multiple approvers
7.when previous approver approves the request then next approver has sent the email
8. same approval taker sent multiple requests for different os links

--- a/style.css
+++ b/style.css
@@ -51,9 +51,10 @@ form, .content {
   padding: 10px;
   font-size: 15px;
   color: white;
-  background: #5F9EA0;
+  background: #00008B;
   border: none;
   border-radius: 5px;
+  display:inline-block;
 }
 
 .error {
@@ -75,7 +76,7 @@ form, .content {
 
 body {
 	margin: 0;
-	color: #6a6f8c;
+	color: #00008B;
 	background: #c8c8c8;
 	font: 600 16px/18px 'Open Sans', sans-serif;
 	background-color: #FFF5EE;
