--- a/style.css
+++ b/style.css
@@ -27,6 +27,11 @@ body {
 	height :400px
 }
 
+.form1 {
+  margin: 80px auto;
+  background: #FFF5EE;
+  width: 80%;
+}
 form, .content {
   width: 30%;
   margin: 0px auto;
@@ -34,6 +39,11 @@ form, .content {
   border: 4px solid #B0C4DE;
   background: white;
   border-radius: 0px 0px 10px 10px;
+    
+  overflow-x: auto;
+}.buttonposition{
+
+margin-left:500px;
 }
 .input-group {
   margin: 10px 0px 10px 0px;
