--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
   text-align: center;
   border: 1px solid #B0C4DE;
   border-bottom: none;
-  border-radius: 10px 10px 0px 0px;
+  border-radius: 10px 10px 10px 10px;
   padding: 20px;
 }
 
@@ -32,6 +32,10 @@ body {
   background: #FFF5EE;
   width: 80%;
 }
+.inner
+{
+    display: inline-block;
+}
 form, .content {
   width: 30%;
   margin: 0px auto;
@@ -41,7 +45,8 @@ form, .content {
   border-radius: 0px 0px 10px 10px;
     
   overflow-x: auto;
-}.buttonposition{
+}
+.buttonposition{
 
 margin-left:500px;
 }
@@ -83,7 +88,7 @@ margin-left:500px;
   background: #2E8B57;
   border: none;
   border-radius: 5px;
-  display: inline-block;
+  
   width: 200px;
 }
 .reject{
